--- a/joy_20121011_client/res/values/strings.xml
+++ b/joy_20121011_client/res/values/strings.xml
@@ -148,6 +148,8 @@
         <string name="shouquansuess">授权成功</string>
         <string name="replysuess">回复成功</string>
         <string name="pleaseenterwords">pleaseenterwords</string>
+        <string name="jiazai">加载完成</string>
+        <string name="shuaxin">刷新完成</string>
          
          
        <!-- <友盟 -->
