--- a/yueshipin/res/values/strings.xml
+++ b/yueshipin/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="tab1">悦单</string>
     <string name="tab2">V榜</string>
     <string name="tab3">我的</string>
+    <string name="tab4">下载</string>
     <string name="tab3page1">播放记录</string>
     <string name="tab3page2">我收藏的</string>
     <string name="tab3page3">悦单</string>
